--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "pubnub": "^4.0.13",
-    "pubnub-angular": "^4.0.0"
+    "pubnub-angular": "^4.0.0",
+    "ngCordova": "^0.1.27-alpha"
   }
 }
